--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,23 +8,21 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
     <!-- http://getbootstrap.com/docs/5.1/ -->
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
     <link href="/static/favicon.ico" rel="icon">
-
     <link href="/static/styles.css" rel="stylesheet">
 
     <title>BullBearBlend: {% block title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="">
 
     <nav class="bg-light border navbar navbar-expand-md navbar-light">
-        <div class="container-fluid">
+        <div class="container">
             <a href="/">
                 <div class="brand-container">
                     <img src="/static/logo.png" alt="BullBearBrand Logo" class="brand-logo">
@@ -64,7 +62,7 @@
     </header>
     {% endif %}
 
-    <main class="container-fluid py-5 text-center">
+    <main class="container-fluid py-5">
         {% block main %}{% endblock %}
     </main>
 
