updated responsive design

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@ Home
 {% endblock %}
 
 {% block main %}
-<div class="hero container pt-5 pb-5">
+<div class="hero container pb-5">
     <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-lg-6 mt-4">
             <h1>BullBearBlend: A free stock market simulation</h1>
             <p>Begin your journey with BullBearBlend, where we equip you with the tools and insights to navigate the
                 stock market confidently. Whether you're making your first trade or managing a diverse portfolio, our
@@ -15,7 +15,7 @@ Home
                 community of savvy investors and start making your financial growth ambitions a reality.</p>
             <a href="/register" class="cta-button">Get Started</a>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-lg-6 mt-4">
             <img src="/static/hero.png" class="w-100"></img>
         </div>
     </div>
